# httpdisk

./: compose.yml  pyproject.toml
src/: Dockerfile  requirements.txt
src/httpdisk/: __main__.py  injector.py
src/httpdisk/controllers/: disk_controller.py  file_controller.py  landing.py  user_controller.py
src/httpdisk/dependencies/: dev.py
src/httpdisk/helpers/: disk.py  file.py
src/httpdisk/libraries/object_storage/: azure_blob_storage.py  object_storage.py
src/httpdisk/models/: disk_metadata.py  file.py  user.py
src/httpdisk/repositories/disk/: azure_disk.py  azure_disk_manager.py  consts.py  disk_manager_protocol.py  disk_protocol.py
src/httpdisk/repositories/user/: user_protocol.py
src/httpdisk/security/: user.py
src/httpdisk/templates/: create_disk_form.html  disk.css  disk.css.map  disk.html  disk.scss  index.css  index.css.map  index.html  index.scss  upload_file_form.html
